--- a/config/operator/namespace/cluster_role.template.yaml
+++ b/config/operator/namespace/cluster_role.template.yaml
@@ -64,6 +64,7 @@ rules:
   - bind
   resourceNames:
   - elastic-beat-autodiscover
+  - elastic-beat-preset-metricbeat-k8s-hosts
 - apiGroups:
   - apps
   resources:
