--- a/config/operator/all-in-one/beat-roles.yaml
+++ b/config/operator/all-in-one/beat-roles.yaml
@@ -4,7 +4,8 @@ kind: ClusterRole
 metadata:
   name: elastic-beat-autodiscover
 rules:
-- apiGroups: [""]
+- apiGroups:
+  - ""
   resources:
   - namespaces
   - pods
@@ -12,3 +13,45 @@ rules:
   - get
   - watch
   - list
+---
+# permissions needed for Beat metricbeat-k8s-hosts preset
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: elastic-beat-preset-metricbeat-k8s-hosts
+rules:
+- apiGroups:
+  - ""
+  resources:
+  - nodes
+  - namespaces
+  - events
+  - pods
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - "extensions"
+  resources:
+  - replicasets
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - apps
+  resources:
+  - statefulsets
+  - deployments
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - ""
+  resources:
+  - nodes/stats
+  verbs:
+  - get
+
