--- a/config/operator/all-in-one/cluster_role.template.yaml
+++ b/config/operator/all-in-one/cluster_role.template.yaml
@@ -12,8 +12,8 @@ rules:
   - subjectaccessreviews
   verbs:
   - create
-# required to allow the operator to bind service accounts it manages
-# to role that holds permissions needed for Beat autodiscover feature
+# required to allow the operator to bind service accounts it manages to role
+# that holds permissions needed for Beat autodiscover feature and Beat CRD presets
 - apiGroups:
   - "rbac.authorization.k8s.io"
   resources:
