--- a/config/e2e/rbac.yaml
+++ b/config/e2e/rbac.yaml
@@ -108,6 +108,12 @@ rules:
       - delete
       - create
       - update
+  - apiGroups:
+    - policy
+    resources:
+    - podsecuritypolicies
+    verbs:
+    - get
   # to dynamically bind service accounts to ClusterRole allowing to use PSP
   - apiGroups:
     - rbac.authorization.k8s.io
@@ -115,6 +121,7 @@ rules:
     - clusterroles
     verbs:
     - bind
+    - get
     resourceNames:
     - elastic-beat-restricted
   - apiGroups:
